--- a/site/style.css
+++ b/site/style.css
@@ -319,7 +319,7 @@ footer img {
 /* Style de la page Produit */
 .grille_produit {
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 40px;
     grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
 }
 .carte img {
@@ -329,4 +329,183 @@ footer img {
 .carte {
     text-align: center;
     width: 215px;
+}
+
+
+/* Style de la page Produit */
+.content_details_produit .carte {
+    height: 200px;
+}
+
+ .content_details_produit .carte h2 {
+     margin-top: 15px;
+     font-size: 15px;
+     font-family: 'Lato', sans-serif;
+ }
+
+.content_details_produit .carte p {
+    margin-top: 5px;
+    color: #896255;
+    font-weight: bold;
+    font-family: cursive;
+    font-size: 15px;
+}
+.chemin_produit {
+    width: 90%;
+    margin: 0 auto;
+    color: gray;
+    font-size: 17px;
+}
+.chemin_produit i{
+    margin-right: 5px;
+    color: gray;
+}
+.chemin_produit p {
+    display: inline;
+    margin-right: 5px;
+}
+
+
+/* Style de la page Panier */
+.formulaire_ajout_panier {
+    width: 50%;
+    margin: 0 auto;
+}
+.formulaire_ajout_panier input {
+    padding-left: 2px;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    border-radius: 0;
+    background-color: white;
+    border: none;
+    border-bottom: #DEB887 2px solid;
+    font-size: 20px;
+    outline: none;
+    width: 100%;
+}
+
+.formulaire_ajout_panier input[type=submit] {
+    margin: 0 auto ;
+    border-radius: 20px;
+    padding: 10px;
+    border: none;
+    background-color: #DEB887;
+    padding-top: 8px;
+    height: 40px;
+    cursor: pointer;
+    color: #7E5835;
+}
+.formulaire_ajout_panier h1 {
+    margin-bottom: 25px;
+    text-align: center;
+    color: #7E5835;
+}
+
+.formulaire_ajout_panier select {
+    display: block;
+    margin: 0 auto 20px auto;
+    padding: 5px 15px;
+    width: 100%;
+    height: 30px;
+    background-color: #DEB887;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    color: #25455c;
+}
+
+.titre {
+    text-align: center;
+    margin: 50px;
+}
+
+form input {
+    width: 35px;
+}
+
+.btn-modif {
+    border: none;
+    padding: 7px;
+    margin-left: 10px;
+    background-color: #5CAFE7;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.btn-suppr {
+    border: none;
+    padding: 7px;
+    margin-left: 10px;
+    background-color: #e74c3c;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.total {
+    color: #5784BA;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+
+table.blueTable {
+    border: 1px solid #FFFFFF;
+    background-color: #FFFFFF;
+    width: 70%;
+    margin: 0 auto ;
+    text-align: center;
+    border-collapse: collapse;
+}
+table.blueTable td, table.blueTable th {
+    border: 0px solid #AAAAAA;
+    padding: 3px 2px;
+}
+table.blueTable tbody td {
+    font-size: 16px;
+    height: 40px;
+}
+table.blueTable tr:nth-child(even) {
+    background: #D0E4F5;
+}
+table.blueTable thead {
+    background: #000102;
+    background: -moz-linear-gradient(top, #404041 0%, #191a1b 66%, #000102 100%);
+    background: -webkit-linear-gradient(top, #404041 0%, #191a1b 66%, #000102 100%);
+    background: linear-gradient(to bottom, #404041 0%, #191a1b 66%, #000102 100%);
+    border-bottom: 2px solid #FFFFFF;
+}
+table.blueTable thead th {
+    font-size: 20px;
+    font-weight: bold;
+    color: #FFFFFF;
+    text-align: center;
+    border-left: 2px solid #FFFFFF;
+}
+table.blueTable thead th:first-child {
+    border-left: none;
+}
+
+table.blueTable tfoot {
+    background-color: #B8B8B8;
+    height: 40px;
+}
+table.blueTable tfoot td {
+    border-right: 2px solid white;
+}
+
+.btn-retour-commande {
+    margin: 40px auto;
+    text-align: center;
+}
+.btn-retour-commande p {
+    margin-right: 15px;
+    display: inline;
+}
+.btn-retour-commande p a {
+    text-decoration: none;
+    color: white;
+    background-color: coral;
+    padding: 15px;
+    border-radius: 10px;
 }
