--- a/site/style.css
+++ b/site/style.css
@@ -38,7 +38,8 @@ a {
 }
 
 .navigation .image img {
-    width: 115px;
+    padding-top: 10px;
+    width: 400px;
 }
 .image {
     grid-area: 1/1/3/2;
@@ -85,21 +86,32 @@ a {
     text-align: center;
     background-color: lightgray;
     padding: 10px;
+    font-family: cursive;
+    font-size: 14px;
+}
+.fabrication_francaise {
+    padding: 10px 0;
 }
 .rgpd {
-    grid-area: 2/1/3/4;
-    margin: 40px 0;
+    border-top: 1px solid gray;
+    grid-area: 2/1/3/5;
+    padding: 20px 0;
     align-self: center;
-
 }
 .paiement {
     padding: 20px 0;
     border-top: gray 1px solid;
     border-bottom: 1px solid gray;
     grid-area: 3/1/4/-1;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    align-items: center;
+    justify-content: center;
+    grid-gap: 0 4%;
 }
+
 footer img {
-    width: 100px;
+    width: 60px;
 }
 .CB {
     width: 60px;
@@ -116,6 +128,7 @@ footer img {
     align-self: center;
     font-weight: bold;
 }
+
 .boutton_acces_espace_client a {
     padding: 15px;
     border: 2px solid black;
